--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Online Shop",
-  "name": "Online Shop",
+  "short_name": "International Online Mall",
+  "name": "International Online Mall",
   "icons": [
     {
       "src": "favicon.ico",
